// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<External /> renders clean correctly 1`] = `
.c0 {
  background-image: unset;
  background-position: 0 1.07em;
  background-repeat: repeat-x;
  background-size: 2px 0.1em;
  color: currentColor;
  font-size: unset;
  text-decoration: none;
}

<a
  className="c0"
  href="/url"
  size="unset"
>
  Text
</a>
`;

exports[`<External /> renders correctly 1`] = `
.c0 {
  background-image: linear-gradient(transparent 50%,currentColor 50%);
  background-position: 0 1.07em;
  background-repeat: repeat-x;
  background-size: 2px 0.1em;
  color: currentColor;
  font-size: unset;
  text-decoration: none;
}

<a
  className="c0"
  href="/url"
  size="unset"
>
  Text
</a>
`;

exports[`<External /> renders size correctly 1`] = `
.c0 {
  background-image: linear-gradient(transparent 50%,currentColor 50%);
  background-position: 0 1.07em;
  background-repeat: repeat-x;
  background-size: 2px 0.1em;
  color: currentColor;
  font-size: 16px;
  text-decoration: none;
}

<a
  className="c0"
  href="/url"
  size="16px"
>
  Text
</a>
`;
